--- a/frontend/material-tailwind-kit-react-main/src/assets/styles/tailwind.css
+++ b/frontend/material-tailwind-kit-react-main/src/assets/styles/tailwind.css
@@ -861,6 +861,10 @@ video {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
+.text-base{
+	font-size: 1rem;
+	line-height: 1.5rem;
+}
 .font-normal{
 	font-weight: 400;
 }
@@ -872,6 +876,9 @@ video {
 }
 .uppercase{
 	text-transform: uppercase;
+}
+.leading-relaxed{
+	line-height: 1.625;
 }
 .tracking-wide{
 	letter-spacing: 0.025em;
@@ -915,6 +922,10 @@ video {
 .text-gray-200{
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
+}
+.text-gray-600{
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
 .shadow-md{
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
