--- a/frontend/material-tailwind-kit-react-main/src/assets/styles/tailwind.css
+++ b/frontend/material-tailwind-kit-react-main/src/assets/styles/tailwind.css
@@ -494,6 +494,9 @@ video {
 		max-width: 1536px;
 	}
 }
+.visible{
+	visibility: visible;
+}
 .relative{
 	position: relative;
 }
@@ -548,11 +551,11 @@ video {
 .ml-4{
 	margin-left: 1rem;
 }
-.mb-12{
-	margin-bottom: 3rem;
+.mr-auto{
+	margin-right: auto;
 }
-.mb-4{
-	margin-bottom: 1rem;
+.mt-10{
+	margin-top: 2.5rem;
 }
 .mb-10{
 	margin-bottom: 2.5rem;
@@ -560,20 +563,17 @@ video {
 .mb-6{
 	margin-bottom: 1.5rem;
 }
-.-mt-12{
-	margin-top: -3rem;
-}
 .mt-24{
 	margin-top: 6rem;
+}
+.-mt-12{
+	margin-top: -3rem;
 }
 .mt-16{
 	margin-top: 4rem;
 }
-.mt-10{
-	margin-top: 2.5rem;
-}
-.mr-auto{
-	margin-right: auto;
+.mb-12{
+	margin-bottom: 3rem;
 }
 .mb-5{
 	margin-bottom: 1.25rem;
@@ -590,23 +590,17 @@ video {
 .mt-2{
 	margin-top: 0.5rem;
 }
-.-mt-64{
-	margin-top: -16rem;
-}
-.-mt-20{
-	margin-top: -5rem;
-}
-.mr-4{
-	margin-right: 1rem;
-}
-.mt-0{
-	margin-top: 0px;
+.mb-7{
+	margin-bottom: 1.75rem;
 }
 .block{
 	display: block;
 }
 .inline-block{
 	display: inline-block;
+}
+.inline{
+	display: inline;
 }
 .flex{
 	display: flex;
@@ -617,11 +611,11 @@ video {
 .grid{
 	display: grid;
 }
+.hidden{
+	display: none;
+}
 .h-10{
 	height: 2.5rem;
-}
-.h-12{
-	height: 3rem;
 }
 .h-screen{
 	height: 100vh;
@@ -632,6 +626,9 @@ video {
 .h-16{
 	height: 4rem;
 }
+.h-12{
+	height: 3rem;
+}
 .h-\[500px\]{
 	height: 500px;
 }
@@ -641,29 +638,20 @@ video {
 .w-10{
 	width: 2.5rem;
 }
-.w-12{
-	width: 3rem;
-}
 .w-16{
 	width: 4rem;
 }
-.w-96{
-	width: 24rem;
+.w-12{
+	width: 3rem;
 }
 .w-screen{
 	width: 100vw;
-}
-.w-40{
-	width: 10rem;
 }
 .min-w-0{
 	min-width: 0px;
 }
 .max-w-7xl{
 	max-width: 80rem;
-}
-.max-w-sm{
-	max-width: 24rem;
 }
 .flex-auto{
 	flex: 1 1 auto;
@@ -723,19 +711,9 @@ video {
 .rounded{
 	border-radius: 0.25rem;
 }
-.rounded-2xl{
-	border-radius: 1rem;
-}
-.border-t{
-	border-top-width: 1px;
-}
 .border-gray-300{
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}
-.border-gray-200{
-	--tw-border-opacity: 1;
-	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }
 .bg-gray-100{
 	--tw-bg-opacity: 1;
@@ -812,14 +790,6 @@ video {
 	padding-left: 1.5rem;
 	padding-right: 1.5rem;
 }
-.py-16{
-	padding-top: 4rem;
-	padding-bottom: 4rem;
-}
-.py-4{
-	padding-top: 1rem;
-	padding-bottom: 1rem;
-}
 .pt-8{
 	padding-top: 2rem;
 }
@@ -832,14 +802,17 @@ video {
 .pb-2{
 	padding-bottom: 0.5rem;
 }
-.pb-20{
-	padding-bottom: 5rem;
-}
-.pt-16{
-	padding-top: 4rem;
+.pt-24{
+	padding-top: 6rem;
 }
 .pb-32{
 	padding-bottom: 8rem;
+}
+.pb-20{
+	padding-bottom: 5rem;
+}
+.pt-32{
+	padding-top: 8rem;
 }
 .pt-20{
 	padding-top: 5rem;
@@ -850,6 +823,9 @@ video {
 .text-center{
 	text-align: center;
 }
+.text-left{
+	text-align: left;
+}
 .font-serif{
 	font-family: "Roboto Slab", serif;
 }
@@ -857,24 +833,14 @@ video {
 	font-size: 0.875rem;
 	line-height: 1.25rem;
 }
-.text-xl{
-	font-size: 1.25rem;
-	line-height: 1.75rem;
-}
 .font-normal{
 	font-weight: 400;
 }
 .font-medium{
 	font-weight: 500;
 }
-.font-bold{
-	font-weight: 700;
-}
 .uppercase{
 	text-transform: uppercase;
-}
-.tracking-wide{
-	letter-spacing: 0.025em;
 }
 .text-blue-600{
 	--tw-text-opacity: 1;
@@ -916,16 +882,20 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
+.text-indigo-800{
+	--tw-text-opacity: 1;
+	color: rgba(55, 48, 163, var(--tw-text-opacity));
+}
+.text-purple-800{
+	--tw-text-opacity: 1;
+	color: rgba(91, 33, 182, var(--tw-text-opacity));
+}
 .shadow-md{
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-lg{
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow-xl{
-	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none{
@@ -2507,11 +2477,11 @@ video {
 	.md\:w-4\/12{
 		width: 33.333333%;
 	}
-	.md\:w-6\/12{
-		width: 50%;
-	}
 	.md\:w-5\/12{
 		width: 41.666667%;
+	}
+	.md\:w-6\/12{
+		width: 50%;
 	}
 	.md\:justify-start{
 		justify-content: flex-start;
@@ -2521,23 +2491,11 @@ video {
 	}
 }
 @media (min-width: 1024px){
-	.lg\:order-2{
-		order: 2;
-	}
-	.lg\:order-3{
-		order: 3;
-	}
-	.lg\:order-1{
-		order: 1;
-	}
-	.lg\:mb-0{
-		margin-bottom: 0px;
-	}
 	.lg\:mt-0{
 		margin-top: 0px;
 	}
-	.lg\:mr-4{
-		margin-right: 1rem;
+	.lg\:mb-0{
+		margin-bottom: 0px;
 	}
 	.lg\:w-6\/12{
 		width: 50%;
@@ -2551,29 +2509,17 @@ video {
 	.lg\:w-8\/12{
 		width: 66.666667%;
 	}
-	.lg\:w-9\/12{
-		width: 75%;
-	}
 	.lg\:flex-row{
 		flex-direction: row;
 	}
 	.lg\:items-center{
 		align-items: center;
 	}
-	.lg\:justify-end{
-		justify-content: flex-end;
-	}
-	.lg\:self-center{
-		align-self: center;
-	}
 	.lg\:p-10{
 		padding: 2.5rem;
 	}
 	.lg\:pt-24{
 		padding-top: 6rem;
-	}
-	.lg\:pt-4{
-		padding-top: 1rem;
 	}
 	.lg\:text-left{
 		text-align: left;
